# DynamicRandomizer

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
API/: IGame.h  csvParser.hpp
app/: CmakeLists.txt  main.cpp
app/ImGui/: imgui_window.cpp
app/loader/: UnixDLLoader.h  WinDLLoader.h
games/: CMakeLists.txt
games/Apex/: CMakeLists.txt  game.cpp  game.h
games/CoD/: CMakeLists.txt  game.cpp  game.h
games/Multiversus/: CMakeLists.txt
games/Siege/: CMakeLists.txt  SiegeFallback.txt  game.cpp  game.h
games/Smash/: CMakeLists.txt
